feat: likes and event entity completed
